--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,12 @@
     "lint:fix": "eslint \"src/**/*.{js,ts}\" --fix",
     "format": "prettier --write \"src/**/*.{js,ts,json,md}\"",
     "fix:passwords": "node scripts/fix-passwords.js",
-    "reset:password": "node scripts/reset-one-password.js"
+    "reset:password": "node scripts/reset-one-password.js",
+    "db:migrate": "knex migrate:latest --knexfile knexfile.js",
+    "db:rollback": "knex migrate:rollback --knexfile knexfile.js",
+    "db:reset": "knex migrate:rollback --all --knexfile knexfile.js && knex migrate:latest --knexfile knexfile.js",
+    "db:seed": "knex seed:run --knexfile knexfile.js",
+    "db:reseed": "npm run db:reset && npm run db:seed"
   },
   "keywords": [],
   "author": "",
